[gd_scene load_steps=12 format=3 uid="uid://c6ift4t1xw2e4"]

[ext_resource type="Script" uid="uid://ebq5avwlhecb" path="res://Menus/end_menu.gd" id="1_aofu2"]
[ext_resource type="AudioStream" uid="uid://dxaa2k3jgjxlv" path="res://Sound/Music/WriteAtSeaLoud.mp3" id="3_jq5bj"]
[ext_resource type="AudioStream" uid="uid://ropmxhi7vkac" path="res://Sound/Effects/baby_crying.mp3" id="5_aofu2"]
[ext_resource type="PackedScene" uid="uid://bpm7kbn4oyb1w" path="res://InputManager/input_manager.tscn" id="7_lbn72"]
[ext_resource type="AudioStream" uid="uid://dir7ol8dcnbk" path="res://Sound/Effects/EndOfLineBellSound.mp3" id="9_s4bew"]
[ext_resource type="Theme" uid="uid://bv7g70yg6r2oc" path="res://Menus/start_menu.tres" id="11_mfr6d"]
[ext_resource type="PackedScene" uid="uid://blfginyn8bta8" path="res://UI/CursorText/cursor_text.tscn" id="12_b8l67"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_aofu2"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_aofu2")

[sub_resource type="Environment" id="Environment_jq5bj"]
background_mode = 2
background_energy_multiplier = 0.0
sky = SubResource("Sky_ig7tw")
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0
tonemap_mode = 3
ssao_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.055
volumetric_fog_albedo = Color(0.2946406, 0.29464063, 0.2946406, 1)
volumetric_fog_length = 255.54

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsckg"]
bg_color = Color(0.29411766, 0.29411766, 0.29411766, 0.8901961)

[node name="EndMenu" type="Node3D"]
script = ExtResource("1_aofu2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jq5bj")

[node name="Camera3D" type="Camera3D" parent="WorldEnvironment"]
transform = Transform3D(-0.9976282, 1.8582273e-09, -0.068833634, -0.026669677, 0.9218902, 0.38653228, 0.06345706, 0.38745123, -0.91970366, -2.2367299, 2.0850995, 0.049279213)

[node name="InputManager" parent="." instance=ExtResource("7_lbn72")]
visible = false

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jq5bj")
volume_db = 2.0
autoplay = true
bus = &"TypewriterSounds"
parameters/looping = true

[node name="TypewriterSoundPlayer" type="AudioStreamPlayer" parent="."]
bus = &"TypewriterSounds"

[node name="TypewriterBellPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_s4bew")
bus = &"TypewriterSounds"

[node name="BabyCryingPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_aofu2")
volume_db = -25.0
pitch_scale = 0.65
autoplay = true
bus = &"MatchSound"

[node name="GameTitleLabel" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
theme = ExtResource("11_mfr6d")
theme_override_font_sizes/normal_font_size = 64
text = "Cursed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -200.0
offset_right = 420.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xsckg")

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_mfr6d")
alignment = 1

[node name="TryAgainCursor" parent="Menu" node_paths=PackedStringArray("input_manager") instance=ExtResource("12_b8l67")]
layout_mode = 2
size_flags_vertical = 3
text = "Try Again"
input_manager = NodePath("../../InputManager")

[node name="MainMenuCursor" parent="Menu" node_paths=PackedStringArray("input_manager") instance=ExtResource("12_b8l67")]
layout_mode = 2
size_flags_vertical = 3
text = "Return to Menu"
input_manager = NodePath("../../InputManager")

[node name="QuitCursor" parent="Menu" node_paths=PackedStringArray("input_manager") instance=ExtResource("12_b8l67")]
layout_mode = 2
size_flags_vertical = 3
text = "Run Away"
input_manager = NodePath("../../InputManager")
